Correct typo and add final notes to pcap-question-revision notebook.

--- a/python3_pcap-question-revision.ipynb
+++ b/python3_pcap-question-revision.ipynb
@@ -1739,7 +1739,7 @@
    "metadata": {},
    "source": [
     "## The `.read()` method\n",
-    "When working with files, the `read()` method reads the file character-by-character."
+    "When working with files, the `read()` method reads the file byte-by-byte."
    ]
   },
   {
@@ -1833,9 +1833,191 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e85ec09d",
+   "metadata": {},
+   "source": [
+    "## `__init__` method is discoverable within objects when using `hasattr()`\n",
+    "When using the `hasattr()` function, the `__init__` method will return `True` for both classes and objects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b17980f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "obj_1 = A()\n",
+    "\n",
+    "print(hasattr(A, \"__init__\"))\n",
+    "print(hasattr(obj_1, \"__init__\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75042154",
+   "metadata": {},
+   "source": [
+    "## Object returned by `open()` is a generator that reads line-by-line\n",
+    "The object returned by the `open()` function is an iterable/generator that reads the file __line-by-line__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8c15baa3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello there\n",
+      "\n",
+      "abc\n",
+      "\n",
+      "def\n",
+      "\n",
+      "ghi\n",
+      "\n",
+      "['Hello there\\n', 'abc\\n', 'def\\n', 'ghi\\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = open(\"text.txt\")\n",
+    "for i in file:\n",
+    "    print(i)\n",
+    "file.close()\n",
+    "\n",
+    "file = open(\"text.txt\")\n",
+    "a = [i for i in file]\n",
+    "print(a)\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52a3f471",
+   "metadata": {},
+   "source": [
+    "## `__bases__` attribute is a tuple containing direct superclasses\n",
+    "The `__bases__` attribute is a tuple containing the direct superclasses of the it's class. If the class has no superclass it will be a tuple containing Python's class object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "cfd0ebc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<class 'object'>,)\n",
+      "(<class '__main__.J'>,)\n",
+      "(<class '__main__.K'>, <class '__main__.J'>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class J:\n",
+    "    pass\n",
+    "\n",
+    "class K(J):\n",
+    "    pass\n",
+    "\n",
+    "class R(K,J):\n",
+    "    pass\n",
+    "\n",
+    "print(J.__bases__)\n",
+    "print(K.__bases__)\n",
+    "print(R.__bases__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09d72a66",
+   "metadata": {},
+   "source": [
+    "## The variable in a for loop can be reassigned\n",
+    "When creating a `for` loop we normally have a variable `i` which holds the value of the current iteration, however, that variable can be reassigned within the loop even."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "26ec8bd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcdefg\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"abcdefg\"\n",
+    "\n",
+    "for i in text:\n",
+    "    i = \"x\"\n",
+    "\n",
+    "print(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cf5211c",
+   "metadata": {},
+   "source": [
+    "## The `index()` function raises an exception upon failure\n",
+    "Unlike the `find()` function which will return `-1` if it cannot find the given substring, the `index()` function will raise a `ValueError` exception if the substring isn't present."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6455bb6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I told you it would raise an exception: substring not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "sport = \"baskeball\"\n",
+    "\n",
+    "try:\n",
+    "    sport.index(\"football\")\n",
+    "except ValueError as e:\n",
+    "    print(f\"I told you it would raise an exception:\",e)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fb61f1a",
+   "id": "8cf80503",
    "metadata": {},
    "outputs": [],
    "source": []
